@@ -10,6 +10,7 @@ Bugfixes:
 * Enforcer: 'make check' now works.
 * Enforcer: Fixed some memory leaks in the tests.
 * Signer Engine: Coverity report fixes some leaks and thread issues.
+* Signer Engine: Now logs to the correct facility again.
 
 OpenDNSSEC 1.3.0b1 - 2011-03-23
 
